premier teste affichage de photo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Orinoco</title>
   </head>
   <body>
-    <script src="/polyfill.bundle.js"></script>
-    <script src="/app.bundle.js"></script>
+    <h1 id="erreur!"></h1>
+    <img src="" id="img" />
+    <script src="./src/index.js"></script>
+    <script src="./polyfill.bundle.js"></script>
+    <script src="./app.bundle.js"></script>
   </body>
 </html>
