ajout des image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <main id="main">
       <template id="templateArticle">
         <article id="fiche">
-          <img id="img1" src="#" alt="" />
+          <img id="img1" src="#" alt="image" />
+
           <h2 id="fiche_titre">TITRE</h2>
           <p id="fiche_body">CONTENU</p>
           <p id="fiche_prix">PRIX</p>
