création de la page Produit pour un article unique

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <template id="templateArticle">
         <article id="fiche">
           <img id="img1" src="#" alt="image" />
-
           <h2 id="fiche_titre">TITRE</h2>
           <p id="fiche_body">CONTENU</p>
           <p id="fiche_prix">PRIX</p>
-          <button id="fiche__btn">Commandez</button>
+
+          <a href="./produit.html" id="produit_lien">Voir le produit</a>
         </article>
       </template>
     </main>
