ajout de css avec sass sur le header

--- a/produit.html
+++ b/produit.html
@@ -8,6 +8,12 @@
     <title>Orinoco</title>
   </head>
   <body>
+    <header>
+      <div id="header">
+        <p id="titrePage">ORINOCO</p>
+      </div>
+      <a href="http://localhost:8080/">Retour page acceuil</a>
+    </header>
     <main id="main">
       <article id="fiche">
         <img id="img1" src="#" alt="image" />
