amélioration css index

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
           <h2 id="fiche_titre">TITRE</h2>
           <p id="fiche_body">CONTENU</p>
           <p id="fiche_prix">PRIX</p>
-
-          <a href="./produit.html" id="produit_lien">Voir le produit</a>
+          <div class="btnIndex">
+            <a href="./produit.html" id="produit_lien">Voir le produit</a>
+          </div>
         </article>
       </template>
     </main>
