--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header>
       <div id="header">
         <p id="titrePage">ORINOCO</p>
+        <a href="./panier.html" id="lienPanier" class="btnIndex"
+          >Voir mon Panier</a
+        >
       </div>
     </header>
     <main id="main">
