Réctification avec mon mentor

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </main>
 
     <!--Les fichier JS doivent toujours etre lu en dernier-->
+    <!--Enlevée une fois project terminée-->
     <script src="./src/index.js"></script>
     <script src="./polyfill.bundle.js"></script>
     <script src="./app.bundle.js"></script>
