--- a/panier.html
+++ b/panier.html
@@ -15,6 +15,20 @@
         <a href="./index.html">Accueil</a>
       </div>
     </header>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Article</th>
+          <th>Prix</th>
+          <th>Quantité</th>
+        </tr>
+      </thead>
+      <tbody id="cart-tablebody"></tbody>
+    </table>
+
+    <p>Sous total : <span class="subtotal"></span>€</p>
+
+    <button id="confirm-command">Passer la commande</button>
 
     <script src="./src/panier.js"></script>
     <script src="./polyfill.bundle.js"></script>
