suite du p5 sur le localStorag

--- a/panier.html
+++ b/panier.html
@@ -15,20 +15,12 @@
         <a href="./index.html">Accueil</a>
       </div>
     </header>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Article</th>
-          <th>Prix</th>
-          <th>Quantité</th>
-        </tr>
-      </thead>
-      <tbody id="cart-tablebody"></tbody>
-    </table>
-
+    <section id="container-produits-panier"></section>
     <p>Sous total : <span class="subtotal"></span>€</p>
 
     <button id="confirm-command">Passer la commande</button>
+
+    <footer>footer</footer>
 
     <script src="./src/panier.js"></script>
     <script src="./polyfill.bundle.js"></script>
