--- a/produit.html
+++ b/produit.html
@@ -20,9 +20,11 @@
         <img id="img1" src="#" alt="image" />
         <h2 id="fiche_titre">TITRE</h2>
         <form>
-          <label for="optionProduit"> Choisir l'option :</label>
+          <label for="optionLenses"> Choisir l'option :</label>
           <select name="optionLenses" id="optionLenses">
-            <option value="choix1" id="option1">choix1</option>
+            <option value="option_1">option_1</option>
+            <option value="option_2">option_2</option>
+            <option value="option_3">option_3</option>
           </select>
         </form>
         <p id="fiche_body">CONTENU</p>
