Commit apres rdv avec mentor

--- a/produit.html
+++ b/produit.html
@@ -22,9 +22,10 @@
         <form>
           <label for="optionLenses"> Choisir l'option :</label>
           <select name="optionLenses" id="optionLenses">
-            <option value="option_1">option_1</option>
+            <option disabled selected>Choisir optique</option>
+            <!-- <option value="option_1">option_1</option>
             <option value="option_2">option_2</option>
-            <option value="option_3">option_3</option>
+            <option value="option_3">option_3</option> -->
           </select>
         </form>
         <p id="fiche_body">CONTENU</p>
