tavancée du p5 en essayant de fair le panier

--- a/panier.html
+++ b/panier.html
@@ -15,8 +15,15 @@
         <a href="./index.html">Accueil</a>
       </div>
     </header>
-    <section id="container-produits-panier"></section>
-    <p>Sous total : <span class="subtotal"></span>€</p>
+    <div id="container-produits-panier">
+      <h2>Les produits sélectionées :</h2>
+      <div class="container-panier_article">
+        <div id="namePanier">Nom du produit</div>
+        <div id="optiquePanier">Optique sélectionnée</div>
+        <div id="prixPanier">prix</div>
+      </div>
+      <div id="total_prix">Prix total</div>
+    </div>
 
     <button id="confirm-command">Passer la commande</button>
 
