debut de l'etape du btn supprimer

--- a/panier.html
+++ b/panier.html
@@ -19,6 +19,7 @@
       <h2>Les produits sélectionées :</h2>
       
       </div>
+      <div id="total_article">Article total</div>
       <div id="total_prix">Prix total</div>
     </div>
 
