Création de la page formulaire

--- a/panier.html
+++ b/panier.html
@@ -22,7 +22,7 @@
       <div id="total_article">Article total</div>
       <div id="total_prix">Prix total</div>
     </div>
-
+<a href="./formulaire.html">Passer la commande</a>
     <button id="confirm-command">Passer la commande</button>
 
     <footer>footer</footer>
