mise en place de la page formulaire avec varible function et switch

--- a/formulaire.html
+++ b/formulaire.html
@@ -18,34 +18,35 @@
 
     <form action="">
       <div class="firstName-container">
-        <label for="">Nom</label>
+        <label for="firstName">Nom</label>
         <input type="text" autocomplete="off" id="firstName" />
         <span></span>
       </div>
 
       <div class="lastName-container">
-        <label for="">Prénom</label>
+        <label for="lastName">Prénom</label>
         <input type="text" autocomplete="off" id="lastName" />
         <span></span>
       </div>
 
       <div class="address-container">
-        <label for="">Adresse</label>
+        <label for="address">Adresse</label>
         <input type="text" autocomplete="off" id="address" />
         <span></span>
       </div>
 
       <div class="city-container">
-        <label for="">Ville</label>
+        <label for="city">Ville</label>
         <input type="text" autocomplete="off" id="city" />
         <span></span>
       </div>
 
       <div class="email-container">
-        <label for="">Email</label>
+        <label for="email">Email</label>
         <input type="text" autocomplete="off" id="email" />
-        <span></span>
+        <span>Email incorrect</span>
       </div>
+      <input type="submit" value="Envoyer" />
     </form>
 
     <script src="./src/formulaire.js"></script>
