création d'un object avec les données des champs du  form et quelque modif css avec sass

--- a/formulaire.html
+++ b/formulaire.html
@@ -19,7 +19,7 @@
 
     <form action="">
       <div class="firstName-container">
-        <label for="firstName">Nom</label>
+        <label for="firstName">Nom</label> <br />
         <input
           type="text"
           autocomplete="off"
@@ -31,7 +31,7 @@
       </div>
 
       <div class="lastName-container">
-        <label for="lastName">Prénom</label>
+        <label for="lastName">Prénom</label> <br />
         <input
           type="text"
           autocomplete="off"
@@ -43,7 +43,7 @@
       </div>
 
       <div class="address-container">
-        <label for="address">Adresse</label>
+        <label for="address">Adresse</label> <br />
         <input
           type="text"
           autocomplete="off"
@@ -55,7 +55,7 @@
       </div>
 
       <div class="city-container">
-        <label for="city">Ville</label>
+        <label for="city">Ville</label> <br />
         <input
           type="text"
           autocomplete="off"
@@ -67,7 +67,7 @@
       </div>
 
       <div class="email-container">
-        <label for="email">Email</label>
+        <label for="email">Email</label> <br />
         <input
           type="text"
           autocomplete="off"
@@ -75,6 +75,7 @@
           placeholder="email@gmail.com"
           required
         />
+        <br />
         <span>Email incorrect</span>
       </div>
       <input type="submit" value="Envoyer" />
