--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
   </head>
 
   <body>
-    <header>
-      <div id="header">
-        <p id="titrePage">ORINOCO</p>
-        <a href="./panier.html" id="lienPanier" class="btnIndex"
-          >Voir mon Panier</a
-        >
-      </div>
+    <header id="header">
+      <p id="header-h1">ORINOCO</p>
+      <nav id="header-nav">
+        <a href="./panier.html" id="header-lienPanier">Panier</a>
+      </nav>
     </header>
     <main id="main">
       <template id="templateArticle">
