mise en forme du footer

--- a/confirmation.html
+++ b/confirmation.html
@@ -9,12 +9,22 @@
   </head>
 
   <body>
-    <header>
-      <div id="header">
-        <p id="titrePage">ORINOCO</p>
-        <a href="./index.html">Accueil</a>
-      </div>
+    <header id="header">
+      <p id="header-h1">ORINOCO</p>
+      <nav id="header-nav">
+        <a href="./index.html" id="header-lienPanier">Acceuil</a>
+
+        <a href="./panier.html" id="header-lienPanier">Panier</a>
+      </nav>
     </header>
+
+    <footer class="footer">
+      <ul class="footer-ul">
+        <li class="footer-ul_li">Nous contacter</li>
+        <li class="footer-ul_li">Nos partenariats</li>
+        <li class="footer-ul_li">FAQ</li>
+      </ul>
+    </footer>
     <script src="./src/confirmation.js"></script>
     <script src="./polyfill.bundle.js"></script>
     <script src="./app.bundle.js"></script>
