--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </article>
       </template>
     </main>
+    <footer class="footer">
+      <ul class="footer-ul">
+        <li class="footer-ul_li">Nous contacter</li>
+        <li class="footer-ul_li">Nos partenariats</li>
+        <li class="footer-ul_li">FAQ</li>
+      </ul>
+    </footer>
 
     <!--Les fichier JS doivent toujours etre lu en dernier-->
     <!--Enlevée une fois project terminée-->
