--- a/panier.html
+++ b/panier.html
@@ -92,7 +92,13 @@
 
     <script src="./src/confirmation.js"></script>
 
-    <footer>footer</footer>
+    <footer class="footer">
+      <ul class="footer-ul">
+        <li class="footer-ul_li">Nous contacter</li>
+        <li class="footer-ul_li">Nos partenariats</li>
+        <li class="footer-ul_li">FAQ</li>
+      </ul>
+    </footer>
 
     <script src="./src/panier.js"></script>
     <script src="./polyfill.bundle.js"></script>
