--- a/produit.html
+++ b/produit.html
@@ -36,6 +36,14 @@
         </button>
       </article>
     </main>
+
+    <footer class="footer">
+      <ul class="footer-ul">
+        <li class="footer-ul_li">Nous contacter</li>
+        <li class="footer-ul_li">Nos partenariats</li>
+        <li class="footer-ul_li">FAQ</li>
+      </ul>
+    </footer>
     <script src="./src/produit.js"></script>
     <script src="./polyfill.bundle.js"></script>
     <script src="./app.bundle.js"></script>
