mise en place de la page confirmation

--- a/confirmation.html
+++ b/confirmation.html
@@ -17,6 +17,9 @@
         <a href="./panier.html" id="header-lienPanier">Panier</a>
       </nav>
     </header>
+    <section>
+      <div id="containerRecapitulatif"></div>
+    </section>
 
     <footer class="footer">
       <ul class="footer-ul">
