--- a/panier.html
+++ b/panier.html
@@ -87,7 +87,7 @@
         <br />
         <span>Email incorrect</span>
       </div>
-      <input type="submit" value="Envoyer" />
+      <input type="submit" value="Passer la commande" />
     </form>
 
     <script src="./src/confirmation.js"></script>
