correction des erreur w3c

--- a/confirmation.html
+++ b/confirmation.html
@@ -9,12 +9,12 @@
   </head>
 
   <body>
-    <header id="header">
-      <p id="header-h1">ORINOCO</p>
-      <nav id="header-nav">
-        <a href="./index.html" id="header-lienPanier">Acceuil</a>
+    <header class="header">
+      <p class="header-h1">ORINOCO</p>
+      <nav class="header-nav">
+        <a href="./index.html" class="header-lienPanier">Acceuil</a>
 
-        <a href="./panier.html" id="header-lienPanier">Panier</a>
+        <a href="./panier.html" class="header-lienPanier">Panier</a>
       </nav>
     </header>
     <section>
