--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <header id="header">
-      <p id="header-h1">ORINOCO</p>
-      <nav id="header-nav">
-        <a href="./panier.html" id="header-lienPanier">Panier</a>
+    <header class="header">
+      <p class="header-h1">ORINOCO</p>
+      <nav class="header-nav">
+        <a href="./panier.html" class="header-lienPanier">Panier</a>
       </nav>
     </header>
     <main id="main">
