--- a/panier.html
+++ b/panier.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <header id="header">
-      <p id="header-h1">ORINOCO</p>
-      <nav id="header-nav">
-        <a href="./index.html" id="header-lienPanier">Accueil</a>
+    <header class="header">
+      <p class="header-h1">ORINOCO</p>
+      <nav class="header-nav">
+        <a href="./index.html" class="header-lienPanier">Accueil</a>
       </nav>
     </header>
 
