--- a/produit.html
+++ b/produit.html
@@ -8,11 +8,11 @@
     <title>Orinoco</title>
   </head>
   <body>
-    <header id="header">
-      <p id="header-h1">ORINOCO</p>
-      <nav id="header-nav">
-        <a href="./index.html" id="header-lienPanier">Accueil</a>
-        <a href="./panier.html" id="header-lienPanier">Panier</a>
+    <header class="header">
+      <p class="header-h1">ORINOCO</p>
+      <nav class="header-nav">
+        <a href="./index.html" class="header-lienPanier">Accueil</a>
+        <a href="./panier.html" class="header-lienPanier">Panier</a>
       </nav>
     </header>
 
