correction de toutes les erreur w3c

--- a/panier.html
+++ b/panier.html
@@ -18,15 +18,13 @@
 
     <div id="container-produits-panier">
       <h2>Les produits sélectionées :</h2>
-      
-      </div>
-      <div id="total_article">Article total</div>
-      <div id="total_prix">Prix total</div>
     </div>
+    <div id="total_article">Article total</div>
+    <div id="total_prix">Prix total</div>
 
     <!--Partie formulaire-->
 
-    <form action="">
+    <form>
       <div class="firstName-container">
         <label for="firstName">Nom</label> <br />
         <input
