RegExp du form nom prenom & email

--- a/panier.html
+++ b/panier.html
@@ -34,7 +34,7 @@
           placeholder="Dupont"
           required
         />
-        <span></span>
+        <small></small>
       </div>
 
       <div class="lastName-container">
@@ -46,7 +46,7 @@
           placeholder="Martin"
           required
         />
-        <span></span>
+        <small></small>
       </div>
 
       <div class="address-container">
@@ -58,7 +58,7 @@
           placeholder="1 rue du moulin"
           required
         />
-        <span></span>
+        <small></small>
       </div>
 
       <div class="city-container">
@@ -70,7 +70,7 @@
           placeholder="Paris"
           required
         />
-        <span></span>
+        <small></small>
       </div>
 
       <div class="email-container">
@@ -82,8 +82,7 @@
           placeholder="email@gmail.com"
           required
         />
-        <br />
-        <span>Email incorrect</span>
+        <small></small>
       </div>
       <input type="submit" value="Passer la commande" />
     </form>
