css page panier

--- a/panier.html
+++ b/panier.html
@@ -23,7 +23,7 @@
     <div id="total_prix">Prix total</div>
 
     <!--Partie formulaire-->
-
+    <h2>Formulaires de commande :</h2>
     <form>
       <div class="firstName-container">
         <label for="firstName">Nom</label> <br />
