Amelioration du css global

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <title>Orinoco</title>
   </head>
 
   <body>
     <header class="header">
-      <p class="header-h1">ORINOCO</p>
+      <h1 class="header-h1">ORINOCO</h1>
       <nav class="header-nav">
         <a href="./panier.html" class="header-lienPanier">Panier</a>
       </nav>
@@ -20,7 +26,7 @@
         <article id="fiche">
           <img id="img1" src="#" alt="image" />
           <h2 id="fiche_titre">TITRE</h2>
-          <p id="fiche_body">CONTENU</p>
+          <h3 id="fiche_body">CONTENU</h3>
 
           <p id="fiche_prix">PRIX</p>
           <div class="btnIndex">
