--- a/panier.html
+++ b/panier.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <title>Orinoco</title>
   </head>
 
   <body>
     <header class="header">
-      <p class="header-h1">ORINOCO</p>
+      <h1 class="header-h1">ORINOCO</h1>
       <nav class="header-nav">
         <a href="./index.html" class="header-lienPanier">Accueil</a>
       </nav>
@@ -23,7 +29,7 @@
     <div id="total_prix">Prix total</div>
 
     <!--Partie formulaire-->
-    <h2>Formulaires de commande :</h2>
+    <h3>Formulaires de commande :</h3>
     <form>
       <div class="firstName-container">
         <label for="firstName">Nom</label> <br />
