--- a/produit.html
+++ b/produit.html
@@ -5,14 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <title>Orinoco</title>
   </head>
   <body>
     <header class="header">
-      <p class="header-h1">ORINOCO</p>
+      <h1 class="header-h1">ORINOCO</h1>
       <nav class="header-nav">
-        <a href="./index.html" class="header-lienPanier">Accueil</a>
-        <a href="./panier.html" class="header-lienPanier">Panier</a>
+        <a href="./index.html" class="header-lienPanier"
+          >Accueil</i
+        ></a>
+        <a href="./panier.html" class="header-lienPanier">Panier <i class="fas fa-shopping-basket"></i></i></a>
       </nav>
     </header>
 
@@ -28,7 +36,7 @@
             <option value="option_3">option_3</option> -->
           </select>
         </form>
-        <p id="fiche_body">CONTENU</p>
+        <h3 id="fiche_body">CONTENU</h3>
         <p id="fiche_prix">PRIX</p>
 
         <button id="btnEnvoyer" type="submit" name="btnEnvoyer">
