ajout de commentaire dans le code

--- a/panier.html
+++ b/panier.html
@@ -35,10 +35,10 @@
         <label for="firstName">Nom</label> <br />
         <input
           type="text"
+          pattern="regex"
           autocomplete="off"
           id="firstName"
           placeholder="Dupont"
-          required
         />
         <small></small>
       </div>
@@ -47,6 +47,7 @@
         <label for="lastName">Prénom</label> <br />
         <input
           type="text"
+          pattern="regex"
           autocomplete="off"
           id="lastName"
           placeholder="Martin"
@@ -59,6 +60,7 @@
         <label for="address">Adresse</label> <br />
         <input
           type="text"
+          pattern="regex"
           autocomplete="off"
           id="address"
           placeholder="1 rue du moulin"
@@ -71,6 +73,7 @@
         <label for="city">Ville</label> <br />
         <input
           type="text"
+          pattern="regex"
           autocomplete="off"
           id="city"
           placeholder="Paris"
@@ -83,6 +86,7 @@
         <label for="email">Email</label> <br />
         <input
           type="text"
+          pattern="regex"
           autocomplete="off"
           id="email"
           placeholder="email@gmail.com"
