--- a/panier.html
+++ b/panier.html
@@ -62,20 +62,13 @@
           autocomplete="off"
           id="address"
           placeholder="1 rue du moulin"
-          required
         />
         <small></small>
       </div>
 
       <div class="city-container">
         <label for="city">Ville</label> <br />
-        <input
-          type="text"
-          autocomplete="off"
-          id="city"
-          placeholder="Paris"
-          required
-        />
+        <input type="text" autocomplete="off" id="city" placeholder="Paris" />
         <small></small>
       </div>
 
@@ -86,7 +79,6 @@
           autocomplete="off"
           id="email"
           placeholder="email@gmail.com"
-          required
         />
         <small></small>
       </div>
