Finalisation des regexp sur le formulaire

--- a/panier.html
+++ b/panier.html
@@ -62,13 +62,21 @@
           autocomplete="off"
           id="address"
           placeholder="1 rue du moulin"
+          required
         />
         <small></small>
       </div>
 
       <div class="city-container">
         <label for="city">Ville</label> <br />
-        <input type="text" autocomplete="off" id="city" placeholder="Paris" />
+        <input
+          type="text"
+          autocomplete="off"
+          id="city"
+          placeholder="Paris"
+          required
+        />
+
         <small></small>
       </div>
 
@@ -79,6 +87,7 @@
           autocomplete="off"
           id="email"
           placeholder="email@gmail.com"
+          required
         />
         <small></small>
       </div>
