mise en forme avec un peu de css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <h1 class="header-h1">ORINOCO</h1>
       <nav class="header-nav">
-        <a href="./panier.html" class="header-lienPanier">Panier</a>
+        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
     <main id="main">
