--- a/produit.html
+++ b/produit.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="header-lienPanier"
           >Accueil</i
         ></a>
-        <a href="./panier.html" class="header-lienPanier">Panier <i class="fas fa-shopping-basket"></i></i></a>
+        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
 
