finalisation du projet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <body>
     <header class="header">
-      <h1 class="header-h1">ORINOCO</h1>
+      <a href="./index.html">
+        <h1 class="header-h1">ORINOCO</h1></a>
       <nav class="header-nav">
         <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
