--- a/confirmation.html
+++ b/confirmation.html
@@ -16,11 +16,12 @@
 
   <body>
     <header class="header">
-      <h1 class="header-h1">ORINOCO</h1>
+      <a href="./index.html">
+        <h1 class="header-h1">ORINOCO</h1></a>
       <nav class="header-nav">
-        <a href="./index.html" class="header-lienPanier">Acceuil</a>
+        <a href="./index.html" class="header-lienPanier">Accueil</a>
 
-        <a href="./panier.html" class="header-lienPanier">Panier</a>
+        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
     <section>
