--- a/panier.html
+++ b/panier.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="header">
-      <h1 class="header-h1">ORINOCO</h1>
+      <a href="./index.html"><h1 class="header-h1">ORINOCO</h1></a>
       <nav class="header-nav">
         <a href="./index.html" class="header-lienPanier">Accueil</a>
       </nav>
