--- a/produit.html
+++ b/produit.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header-h1">ORINOCO</h1>
+      <a href="./index.html">
+      <h1 class="header-h1">ORINOCO</h1></a>
       <nav class="header-nav">
         <a href="./index.html" class="header-lienPanier"
           >Accueil</i
@@ -24,16 +25,13 @@
       </nav>
     </header>
 
-    <main id="main">
+    <main class="main">
       <article id="fiche">
         <img id="img1" src="#" alt="image" />
         <h2 id="fiche_titre">TITRE</h2>
         <form>
           <label for="optionLenses"> Choisir l'option :</label>
           <select name="optionLenses" id="optionLenses">
-            <!-- <option value="option_1">option_1</option>
-            <option value="option_2">option_2</option>
-            <option value="option_3">option_3</option> -->
           </select>
         </form>
         <h3 id="fiche_body">CONTENU</h3>
