finalisation de la partie index

--- a/produit.html
+++ b/produit.html
@@ -21,7 +21,7 @@
         <a href="./index.html" class="header-lienPanier"
           >Accueil</i
         ></a>
-        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
+        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fa@s fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
 
