--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <body>
     <header class="header">
       <a href="./index.html">
-        <h1 class="header-h1">ORINOCO</h1></a>
+      <h1 class="header-h1">ORINOCO</h1></a>
       <nav class="header-nav">
         <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
     <main id="main">
-      <template id="templateArticle">
+      <template class="templateArticle">
         <article id="fiche">
-          <img id="img1" src="#" alt="image" />
+          <img class="img1" src="#" alt="image" />
           <h2 id="fiche_titre">TITRE</h2>
           <h3 id="fiche_body">CONTENU</h3>
 
