modif de la page produit.js

--- a/produit.html
+++ b/produit.html
@@ -26,16 +26,16 @@
     </header>
 
     <main class="main">
-      <article id="fiche">
-        <img id="img1" src="#" alt="image" />
-        <h2 id="fiche_titre">TITRE</h2>
+      <article class="fiche">
+        <img class="img1" src="#" alt="image" />
+        <h2 class="fiche_titre">TITRE</h2>
         <form>
           <label for="optionLenses"> Choisir l'option :</label>
           <select name="optionLenses" id="optionLenses">
           </select>
         </form>
-        <h3 id="fiche_body">CONTENU</h3>
-        <p id="fiche_prix">PRIX</p>
+        <h3 class="fiche_body">CONTENU</h3>
+        <p class="fiche_prix">PRIX</p>
 
         <button id="btnEnvoyer" type="submit" name="btnEnvoyer">
           Ajoutez l'article au panier
