--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     />
     <title>Orinoco</title>
   </head>
-
   <body>
     <header class="header">
       <a href="./index.html">
@@ -28,10 +27,10 @@
           <img class="img1" src="#" alt="image" />
           <h2 class="fiche_titre">TITRE</h2>
           <h3 class="fiche_body">CONTENU</h3>
-
           <p class="fiche_prix">PRIX</p>
           <div class="btnIndex">
-            <a href="./produit.html" class="produit_lien">Voir le produit</a>
+            <a href="./produit.html" class="produit_lien">
+              <div>Voir le produit</div></a>
          </div>
         </article>
       </template>
@@ -43,7 +42,6 @@
         <li class="footer-ul_li">FAQ</li>
       </ul>
     </footer>
-
     <script src="dist/polyfill.bundle.js"></script>
     <script src="dist/app.bundle.js"></script>
   </body>
