--- a/produit.html
+++ b/produit.html
@@ -21,10 +21,9 @@
         <a href="./index.html" class="header-lienPanier"
           >Accueil</i
         ></a>
-        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fa@s fa-shopping-basket basket"></i></i></a>
+        <a href="./panier.html" class="header-lienPanier">Mon panier &nbsp;<i class="fas fa-shopping-basket basket"></i></i></a>
       </nav>
     </header>
-
     <main class="main">
       <article class="fiche">
         <img class="img1" src="#" alt="image" />
@@ -36,13 +35,11 @@
         </form>
         <h3 class="fiche_body">CONTENU</h3>
         <p class="fiche_prix">PRIX</p>
-
         <button id="btnEnvoyer" type="submit" name="btnEnvoyer">
           Ajoutez l'article au panier
         </button>
       </article>
     </main>
-
     <footer class="footer">
       <ul class="footer-ul">
         <li class="footer-ul_li">Nous contacter</li>
